--- a/src/components/footer/styles.module.scss
+++ b/src/components/footer/styles.module.scss
@@ -53,6 +53,7 @@
       text-transform: uppercase;
       font-weight: bold;
       margin-bottom: 4px;
+      font-family: 'Avenir Heavy';
     }
   }
 
@@ -89,15 +90,14 @@
 
     li {
       padding: 0;
-      margin: 0 0 0 10px;
+      margin: 0 0 0 7px;
       list-style-type: none;
 
       a {
         border-radius: 50%;
-        width: 40px;
+        width: 25px;
         height: 40px;
         display: block;
-        padding: 8px;
 
         svg {
           width: 100%;
