--- a/src/components/textBlock/styles.module.scss
+++ b/src/components/textBlock/styles.module.scss
@@ -1,7 +1,7 @@
-@import "../../sass/variables.scss";
+@import '../../sass/variables.scss';
 
 .text-block {
-  padding: 30px 0;
+  padding: 35px 0;
   font-size: 18px;
   line-height: 16px;
   text-align: center;
@@ -13,7 +13,7 @@
   }
 
   @media all and (min-width: $tablet) {
-    padding: 50px 0;
+    padding: 60px 0;
     font-size: 24px;
     line-height: 21px;
   }
