--- a/src/components/threeRowContent/styles.module.scss
+++ b/src/components/threeRowContent/styles.module.scss
@@ -5,6 +5,7 @@
   grid-template-columns: 1fr;
   gap: 50px;
   margin-top: 50px;
+  margin-bottom: 100px;
   @media all and (min-width: $tablet) {
     grid-template-columns: 1fr 1fr 1fr;
   }
