--- a/src/components/introNew/styles.module.scss
+++ b/src/components/introNew/styles.module.scss
@@ -1,6 +1,15 @@
 p {
   margin: 0px;
+  font-size: 16px;
+  font-family: 'Avenir Light';
+}
+
+span {
+  font-family: 'Avenir Light';
   font-size: 12px;
+  margin: 0px;
+  padding: 0px;
+  line-height: 0px;
 }
 
 h1 {
