--- a/src/components/contactText/styles.module.scss
+++ b/src/components/contactText/styles.module.scss
@@ -22,16 +22,19 @@
       text-align: right;
     }
 
+    .directions {
+      text-decoration: none;
+    }
+
     p {
       font-size: 1em;
       color: black;
       font-weight: bold;
-      font-family: 'Avenir Heavy';
+      font-family: 'Avenir light';
     }
 
     a {
       color: black;
-      text-decoration: none;
     }
   }
 }
