--- a/src/components/textBlock/styles.module.scss
+++ b/src/components/textBlock/styles.module.scss
@@ -2,19 +2,24 @@
 
 .text-block {
   padding: 35px 0;
-  font-size: 18px;
+  font-size: 24px;
   line-height: 16px;
   text-align: center;
-  font-family: $AvenirBlack;
-  text-transform: uppercase;
 
   p {
     margin: 0;
+    font-size: 18px;
+    font-family: $AvenirBlack;
+    text-transform: uppercase;
+
+    @media all and (min-width: $tablet) {
+      font-size: 28px;
+    }
   }
 
   @media all and (min-width: $tablet) {
     padding: 60px 0;
     font-size: 24px;
-    line-height: 21px;
+    line-height: 26px;
   }
 }
