--- a/src/components/clientGrid/styles.module.scss
+++ b/src/components/clientGrid/styles.module.scss
@@ -17,12 +17,12 @@
   display: block;
   font-size: 16px;
   font-style: italic;
-  font-weight: 500;
+  font-weight: bold;
   margin: 0 0 5px 0;
   text-align: center;
 
   @media all and (min-width: $tablet) {
-    font-size: 22px;
+    font-size: 24px;
     margin: 0 0 35px 0;
   }
 }
