--- a/src/components/footer/styles.module.scss
+++ b/src/components/footer/styles.module.scss
@@ -44,6 +44,7 @@
 
     .footer-copy-text {
       display: inline-block;
+      font-size: 14px;
     }
 
     a {
@@ -54,6 +55,7 @@
       font-weight: bold;
       margin-bottom: 4px;
       font-family: 'Avenir Heavy';
+      letter-spacing: 1px;
     }
   }
 
