--- a/src/components/singleImage/styles.module.scss
+++ b/src/components/singleImage/styles.module.scss
@@ -11,10 +11,10 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 
   img {
-    width: 100%;
+    width: 85%;
   }
 
   p {
